test stream generation simplified